--- a/.github/workflows/check-update.yml
+++ b/.github/workflows/check-update.yml
@@ -18,11 +18,12 @@ jobs:
         with:
           node-version: '16'
           cache: yarn
+      - run: sudo apt update; sudo apt install convmv
       - run: yarn install --frozen-lockfile
       - run: mr_ojii_file=`curl -s 'https://api.github.com/repos/Mr-Ojii/L-SMASH-Works-Auto-Builds/releases/latest' | jq -r '.assets[] | select(.name|test("Mr-Ojii_Mr-Ojii")).name'` && echo "mr_ojii_file=$mr_ojii_file" >> $GITHUB_ENV
       - run: sed -i "s/L-SMASH-Works_rev[0-9]*_Mr-Ojii_Mr-Ojii_AviUtl\.zip/${{ env.mr_ojii_file }}/g" v3/packages.json
       - run: sudo chmod -R u+x /home/runner/work/apm-data/apm-data/node_modules/7zip-bin
-      - run: yarn run check-update
+      - run: LANG=C yarn run check-update
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         with:
