--- a/.github/workflows/check-update.yml
+++ b/.github/workflows/check-update.yml
@@ -20,7 +20,7 @@ jobs:
           cache: yarn
       - run: sudo apt update; sudo apt install convmv
       - run: yarn install --frozen-lockfile
-      - run: current_zip_name=`cat v3/packages.json | sed -e "s/\(L-SMASH-Works_rev[0-9]*_Mr-Ojii_Mr-Ojii_AviUtl\.zip\)/\1/g"` && echo "current_zip_name=${current_zip_name//'/'/'\/'}" >> $GITHUB_ENV
+      - run: current_zip_name=`sed "s/\(L-SMASH-Works_rev[0-9]*_Mr-Ojii_Mr-Ojii_AviUtl\.zip\)/\1/g" v3/packages.json` && echo "current_zip_name=${current_zip_name//'/'/'\/'}" >> $GITHUB_ENV
       - run: mr_ojii_file=`curl -s 'https://api.github.com/repos/Mr-Ojii/L-SMASH-Works-Auto-Builds/releases/latest' | jq -r '.assets[] | select(.name|test("Mr-Ojii_Mr-Ojii")).browser_download_url'` && echo "mr_ojii_file=${mr_ojii_file//'/'/'\/'}" >> $GITHUB_ENV
       - run: '[["$mr_ojii_file"=~"$current_zip_name"]] && sed -i "s/https:\/\/github\.com\/Mr-Ojii\/L-SMASH-Works-Auto-Builds\/releases\/download.*_Mr-Ojii_Mr-Ojii_AviUtl\.zip/${{ env.mr_ojii_file }}/g" v3/packages.json'
       - run: sudo chmod -R u+x /home/runner/work/apm-data/apm-data/node_modules/7zip-bin
